# pale

./: .gitignore  Cargo.toml  Makefile  README.md
doc/: Basics.md
interpreter/: Cargo.toml
interpreter/src/: main.rs
src/: ast.rs  callable.rs  error.rs  identifiers.rs  lib.rs  main.rs  tokens.rs  types.rs
src/lib/: ast.rs  callable.rs  error.rs  lib.rs  tokens.rs  types.rs
