[package]
name = "pale"
version = "0.1.0"
edition = "2021"
author = "FeistyKit <eeveebeevee33@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
path = "src/lib.rs"
test = true

[features]
debug = []

[[bin]]
name = "pale"
path = "src/main.rs"
