[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"
author = "FeistyKit <eeveebeevee33@gmail.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pale = { path = "./..", features = ["debug"] }
clap = {version = "~3", features = ["derive"] }
